# platform.core.api.telephony

./: CMakeLists.txt  capi-telephony.pc.in
doc/: telephony_doc.h
include/: telephony.h  telephony_call.h  telephony_common.h  telephony_modem.h  telephony_network.h  telephony_private.h  telephony_sim.h
packaging/: capi-telephony.spec
src/: telephony_call.c  telephony_common.c  telephony_modem.c  telephony_network.c  telephony_sim.c
test/: CMakeLists.txt  test_all_api.c
